# HoudiniEngineSample-20.5

./: .gitignore  CMakeLists.txt  README.md
Python/: he_geometry.py  he_manager.py  he_sample.py
Source/: HoudiniApi.cpp  HoudiniApi.h  HoudiniEngineGeometry.cpp  HoudiniEngineManager.cpp  HoudiniEngineManager.h  HoudiniEnginePlatform.cpp  HoudiniEngineSample.cpp  README.md  cook_delight_main.cpp  hda_procedural.cpp  hda_procedural_main.cpp
